--- a/python/pocs-tests/chatbot/requirements.txt
+++ b/python/pocs-tests/chatbot/requirements.txt
@@ -18,7 +18,8 @@ PyYAML==5.1.2
 requests==2.22.0
 six==1.12.0
 spacy==2.1.8
-SQLAlchemy==1.2.19
+# SQLAlchemy==1.2.19
+SQLAlchemy==1.3.6
 srsly==0.0.7
 thinc==7.0.8
 tqdm==4.33.0
